Fix: Fonts bug on IOS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  * {
+    -webkit-text-size-adjust : none;
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
